syntax = "proto3";

package managementpb.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";

option go_package = "api/managementpb;managementpb";

// AddAnnotationRequest is a params to add new annotation.
message AddAnnotationRequest {
  // An annotation description. Required.
  string text = 1 [(validate.rules).string.min_len = 1];
  // Tags are used to filter annotations.
  repeated string tags = 2;
  // Used for annotate node.
  string node_name = 3;
  // Used for annotate services.
  repeated string service_names = 4;
}

message AddAnnotationResponse {}

// Annotation service provides public methods for managing Annotations.
service AnnotationService {
  // AddAnnotation adds annotation.
  rpc AddAnnotation(AddAnnotationRequest) returns (AddAnnotationResponse) {
    option (google.api.http) = {
      post: "/v1/management/Annotations/Add"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Add Annotation"
      description: "Adds annotation."
    };
  }
}
